# python-depedency-diagram-generator

./: README.md  __init__.py  constants.py  core.py  main.py  pyproject.toml  test_dep.py  test_depth.py  test_function_dependency.py  test_mermaid_diagram.py
analyzer/: __init__.py  entity.py  parser.py  scanner.py
generator/: __init__.py  ascii_generator.py  base.py  mermaid_generator.py  text_generator.py
src/diagrams/: main.py
tests/: dep_test.py  test_dep.py  test_depth.py  test_function_dependency.py  test_main.py  test_mermaid_diagram.py
